# parseconf

./: .travis.yml  CHANGES  README.md  cov.sh  fmt.sh  parseconf.c  parseconf.h
example/: .gitignore  Makefile.am  autogen.sh  configure.ac  example.c
example/test/: Makefile.am  test1.gold  test1.sh
